// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`caracterización del pipeline con proveedores sintéticos > energía v2: eficiente, SOC 60 % 1`] = `
{
  "chargers": [
    "s20",
    "s35",
    "s45",
    "s60",
    "s72",
  ],
  "engine": [
    "mapbox",
    "mapbox",
    "mapbox",
    "mapbox",
  ],
  "plans": [
    {
      "arrivalSoc": 20.7,
      "departureCharge": undefined,
      "distanceKm": 129.1,
      "energyKwh": 18.5,
      "feasible": true,
      "id": "route-0",
      "initialSoc": 60,
      "label": "Ruta A",
      "minSoc": 20.7,
      "noTolls": undefined,
      "stops": [],
      "totalMinutes": 158,
      "via": "Ruta 45A, Ruta 62",
    },
    {
      "arrivalSoc": 21.2,
      "departureCharge": undefined,
      "distanceKm": 128.7,
      "energyKwh": 18.3,
      "feasible": true,
      "id": "route-1",
      "initialSoc": 60,
      "label": "Ruta B",
      "minSoc": 21.2,
      "noTolls": undefined,
      "stops": [],
      "totalMinutes": 157,
      "via": "Ruta 45A, Ruta 62",
    },
    {
      "arrivalSoc": 19.5,
      "departureCharge": undefined,
      "distanceKm": 144,
      "energyKwh": 19.1,
      "feasible": true,
      "id": "route-2",
      "initialSoc": 60,
      "label": "Ruta C",
      "minSoc": 19.5,
      "noTolls": true,
      "stops": [],
      "totalMinutes": 173,
      "via": "Ruta 45A",
    },
    {
      "arrivalSoc": 15.9,
      "departureCharge": undefined,
      "distanceKm": 149.4,
      "energyKwh": 20.7,
      "feasible": true,
      "id": "route-3",
      "initialSoc": 60,
      "label": "Ruta D",
      "minSoc": 15.9,
      "noTolls": undefined,
      "stops": [],
      "totalMinutes": 178,
      "via": "Ruta 66",
    },
  ],
  "selectedId": "route-0",
  "warnings": [],
  "weather": {
    "elevationM": 1200,
    "source": "Open-Meteo",
    "temperatureC": 22,
    "windDirDeg": 200,
    "windKmh": 12,
  },
}
`;

exports[`caracterización del pipeline con proveedores sintéticos > energía v2: menos paradas, SOC 90 %, sport 1`] = `
{
  "chargers": [
    "s20",
    "s35",
    "s45",
    "s60",
    "s72",
  ],
  "engine": [
    "mapbox",
    "mapbox",
    "mapbox",
    "mapbox",
  ],
  "plans": [
    {
      "arrivalSoc": 48.3,
      "departureCharge": undefined,
      "distanceKm": 129.1,
      "energyKwh": 19.6,
      "feasible": true,
      "id": "route-0",
      "initialSoc": 90,
      "label": "Ruta A",
      "minSoc": 48.3,
      "noTolls": undefined,
      "stops": [],
      "totalMinutes": 131,
      "via": "Ruta 45A, Ruta 62",
    },
    {
      "arrivalSoc": 48.8,
      "departureCharge": undefined,
      "distanceKm": 128.7,
      "energyKwh": 19.4,
      "feasible": true,
      "id": "route-1",
      "initialSoc": 90,
      "label": "Ruta B",
      "minSoc": 48.8,
      "noTolls": undefined,
      "stops": [],
      "totalMinutes": 131,
      "via": "Ruta 45A, Ruta 62",
    },
    {
      "arrivalSoc": 46.8,
      "departureCharge": undefined,
      "distanceKm": 144,
      "energyKwh": 20.3,
      "feasible": true,
      "id": "route-2",
      "initialSoc": 90,
      "label": "Ruta C",
      "minSoc": 46.8,
      "noTolls": true,
      "stops": [],
      "totalMinutes": 144,
      "via": "Ruta 45A",
    },
    {
      "arrivalSoc": 43.8,
      "departureCharge": undefined,
      "distanceKm": 149.4,
      "energyKwh": 21.8,
      "feasible": true,
      "id": "route-3",
      "initialSoc": 90,
      "label": "Ruta D",
      "minSoc": 43.8,
      "noTolls": undefined,
      "stops": [],
      "totalMinutes": 149,
      "via": "Ruta 66",
    },
  ],
  "selectedId": "route-0",
  "warnings": [],
  "weather": {
    "elevationM": 1200,
    "source": "Open-Meteo",
    "temperatureC": 22,
    "windDirDeg": 200,
    "windKmh": 12,
  },
}
`;

exports[`caracterización del pipeline con proveedores sintéticos > energía v2: modo más rápido, SOC 35 % 1`] = `
{
  "chargers": [
    "s20",
    "s35",
    "s45",
    "s60",
    "s72",
  ],
  "engine": [
    "mapbox",
    "mapbox",
    "mapbox",
    "mapbox",
  ],
  "plans": [
    {
      "arrivalSoc": 14.1,
      "departureCharge": undefined,
      "distanceKm": 129.1,
      "energyKwh": 19.8,
      "feasible": true,
      "id": "route-0",
      "initialSoc": 35,
      "label": "Ruta A",
      "minSoc": 14.1,
      "noTolls": undefined,
      "stops": [
        "s20 32.9→53.9 15 min",
      ],
      "totalMinutes": 165,
      "via": "Ruta 45A, Ruta 62",
    },
    {
      "arrivalSoc": 12.7,
      "departureCharge": undefined,
      "distanceKm": 128.7,
      "energyKwh": 18.8,
      "feasible": true,
      "id": "route-1",
      "initialSoc": 35,
      "label": "Ruta B",
      "minSoc": 12.7,
      "noTolls": undefined,
      "stops": [
        "s20 34.2→51.9 13 min",
      ],
      "totalMinutes": 157,
      "via": "Ruta 45A, Ruta 62",
    },
    {
      "arrivalSoc": -6.3,
      "departureCharge": undefined,
      "distanceKm": 144,
      "energyKwh": 19.5,
      "feasible": false,
      "id": "route-2",
      "initialSoc": 35,
      "label": "Ruta C",
      "minSoc": -6.3,
      "noTolls": true,
      "stops": [],
      "totalMinutes": 155,
      "via": "Ruta 45A",
    },
    {
      "arrivalSoc": -9.8,
      "departureCharge": undefined,
      "distanceKm": 149.4,
      "energyKwh": 21.1,
      "feasible": false,
      "id": "route-3",
      "initialSoc": 35,
      "label": "Ruta D",
      "minSoc": -9.8,
      "noTolls": undefined,
      "stops": [],
      "totalMinutes": 161,
      "via": "Ruta 66",
    },
  ],
  "selectedId": "route-0",
  "warnings": [],
  "weather": {
    "elevationM": 1200,
    "source": "Open-Meteo",
    "temperatureC": 22,
    "windDirDeg": 200,
    "windKmh": 12,
  },
}
`;

exports[`caracterización del pipeline con proveedores sintéticos > energía v2: más segura, SOC 15 % 1`] = `
{
  "chargers": [
    "s20",
    "s35",
    "s45",
    "s60",
    "s72",
  ],
  "engine": [
    "mapbox",
    "mapbox",
    "mapbox",
    "mapbox",
  ],
  "plans": [
    {
      "arrivalSoc": 30.1,
      "departureCharge": 7,
      "distanceKm": 129.1,
      "energyKwh": 19.8,
      "feasible": true,
      "id": "route-0",
      "initialSoc": 22,
      "label": "Ruta A",
      "minSoc": 19.9,
      "noTolls": undefined,
      "stops": [
        "s20 19.9→69.9 29 min",
      ],
      "totalMinutes": 179,
      "via": "Ruta 45A, Ruta 62",
    },
    {
      "arrivalSoc": 28.7,
      "departureCharge": 6,
      "distanceKm": 128.7,
      "energyKwh": 18.8,
      "feasible": true,
      "id": "route-1",
      "initialSoc": 21,
      "label": "Ruta B",
      "minSoc": 20.2,
      "noTolls": undefined,
      "stops": [
        "s20 20.2→67.9 27 min",
      ],
      "totalMinutes": 171,
      "via": "Ruta 45A, Ruta 62",
    },
    {
      "arrivalSoc": -26.3,
      "departureCharge": undefined,
      "distanceKm": 144,
      "energyKwh": 19.5,
      "feasible": false,
      "id": "route-2",
      "initialSoc": 15,
      "label": "Ruta C",
      "minSoc": -26.3,
      "noTolls": true,
      "stops": [],
      "totalMinutes": 155,
      "via": "Ruta 45A",
    },
    {
      "arrivalSoc": -29.8,
      "departureCharge": undefined,
      "distanceKm": 149.4,
      "energyKwh": 21.1,
      "feasible": false,
      "id": "route-3",
      "initialSoc": 15,
      "label": "Ruta D",
      "minSoc": -29.8,
      "noTolls": undefined,
      "stops": [],
      "totalMinutes": 161,
      "via": "Ruta 66",
    },
  ],
  "selectedId": "route-0",
  "warnings": [],
  "weather": {
    "elevationM": 1200,
    "source": "Open-Meteo",
    "temperatureC": 22,
    "windDirDeg": 200,
    "windKmh": 12,
  },
}
`;

exports[`caracterización del pipeline con proveedores sintéticos > menos paradas, SOC 90 % 1`] = `
{
  "chargers": [
    "s20",
    "s35",
    "s45",
    "s60",
    "s72",
  ],
  "engine": [
    "mapbox",
    "mapbox",
    "mapbox",
    "mapbox",
  ],
  "plans": [
    {
      "arrivalSoc": 43.7,
      "departureCharge": undefined,
      "distanceKm": 129.1,
      "energyKwh": 21.8,
      "feasible": true,
      "id": "route-0",
      "initialSoc": 90,
      "label": "Ruta A",
      "minSoc": 43.7,
      "noTolls": undefined,
      "stops": [],
      "totalMinutes": 133,
      "via": "Ruta 45A, Ruta 62",
    },
    {
      "arrivalSoc": 44.2,
      "departureCharge": undefined,
      "distanceKm": 128.7,
      "energyKwh": 21.6,
      "feasible": true,
      "id": "route-1",
      "initialSoc": 90,
      "label": "Ruta B",
      "minSoc": 44.2,
      "noTolls": undefined,
      "stops": [],
      "totalMinutes": 133,
      "via": "Ruta 45A, Ruta 62",
    },
    {
      "arrivalSoc": 41.5,
      "departureCharge": undefined,
      "distanceKm": 144,
      "energyKwh": 22.8,
      "feasible": true,
      "id": "route-2",
      "initialSoc": 90,
      "label": "Ruta C",
      "minSoc": 41.5,
      "noTolls": true,
      "stops": [],
      "totalMinutes": 146,
      "via": "Ruta 45A",
    },
    {
      "arrivalSoc": 38.2,
      "departureCharge": undefined,
      "distanceKm": 149.4,
      "energyKwh": 24.4,
      "feasible": true,
      "id": "route-3",
      "initialSoc": 90,
      "label": "Ruta D",
      "minSoc": 38.2,
      "noTolls": undefined,
      "stops": [],
      "totalMinutes": 151,
      "via": "Ruta 66",
    },
  ],
  "selectedId": "route-0",
  "warnings": [],
  "weather": {
    "elevationM": 1200,
    "source": "Open-Meteo",
    "temperatureC": 22,
    "windDirDeg": 200,
    "windKmh": 12,
  },
}
`;

exports[`caracterización del pipeline con proveedores sintéticos > menos paradas, SOC 90 % 2`] = `"09d9acab42371fef"`;

exports[`caracterización del pipeline con proveedores sintéticos > modo más rápido, SOC 35 %: resumen y huella del resultado completo 1`] = `
{
  "chargers": [
    "s20",
    "s35",
    "s45",
    "s60",
    "s72",
  ],
  "engine": [
    "mapbox",
    "mapbox",
    "mapbox",
    "mapbox",
  ],
  "plans": [
    {
      "arrivalSoc": 13.9,
      "departureCharge": undefined,
      "distanceKm": 129.1,
      "energyKwh": 21.1,
      "feasible": true,
      "id": "route-0",
      "initialSoc": 35,
      "label": "Ruta A",
      "minSoc": 13.9,
      "noTolls": undefined,
      "stops": [
        "s20 32.7→56.3 16 min",
      ],
      "totalMinutes": 166,
      "via": "Ruta 45A, Ruta 62",
    },
    {
      "arrivalSoc": 12.5,
      "departureCharge": undefined,
      "distanceKm": 128.7,
      "energyKwh": 20.1,
      "feasible": true,
      "id": "route-1",
      "initialSoc": 35,
      "label": "Ruta B",
      "minSoc": 12.5,
      "noTolls": undefined,
      "stops": [
        "s20 34→54.3 15 min",
      ],
      "totalMinutes": 158,
      "via": "Ruta 45A, Ruta 62",
    },
    {
      "arrivalSoc": -9.7,
      "departureCharge": undefined,
      "distanceKm": 144,
      "energyKwh": 21,
      "feasible": false,
      "id": "route-2",
      "initialSoc": 35,
      "label": "Ruta C",
      "minSoc": -9.7,
      "noTolls": true,
      "stops": [],
      "totalMinutes": 155,
      "via": "Ruta 45A",
    },
    {
      "arrivalSoc": -13.4,
      "departureCharge": undefined,
      "distanceKm": 149.4,
      "energyKwh": 22.8,
      "feasible": false,
      "id": "route-3",
      "initialSoc": 35,
      "label": "Ruta D",
      "minSoc": -13.4,
      "noTolls": undefined,
      "stops": [],
      "totalMinutes": 160,
      "via": "Ruta 66",
    },
  ],
  "selectedId": "route-0",
  "warnings": [],
  "weather": {
    "elevationM": 1200,
    "source": "Open-Meteo",
    "temperatureC": 22,
    "windDirDeg": 200,
    "windKmh": 12,
  },
}
`;

exports[`caracterización del pipeline con proveedores sintéticos > modo más rápido, SOC 35 %: resumen y huella del resultado completo 2`] = `"c73975875bc7571a"`;

exports[`caracterización del pipeline con proveedores sintéticos > más segura, SOC 15 %, margen conservador (pide carga antes de salir) 1`] = `
{
  "chargers": [
    "s20",
    "s35",
    "s45",
    "s60",
    "s72",
  ],
  "engine": [
    "mapbox",
    "mapbox",
    "mapbox",
    "mapbox",
  ],
  "plans": [
    {
      "arrivalSoc": 29.9,
      "departureCharge": 8,
      "distanceKm": 129.1,
      "energyKwh": 21.1,
      "feasible": true,
      "id": "route-0",
      "initialSoc": 23,
      "label": "Ruta A",
      "minSoc": 20.7,
      "noTolls": undefined,
      "stops": [
        "s20 20.7→72.3 29 min",
      ],
      "totalMinutes": 179,
      "via": "Ruta 45A, Ruta 62",
    },
    {
      "arrivalSoc": 28.5,
      "departureCharge": 6,
      "distanceKm": 128.7,
      "energyKwh": 20.1,
      "feasible": true,
      "id": "route-1",
      "initialSoc": 21,
      "label": "Ruta B",
      "minSoc": 20,
      "noTolls": undefined,
      "stops": [
        "s20 20→70.3 29 min",
      ],
      "totalMinutes": 172,
      "via": "Ruta 45A, Ruta 62",
    },
    {
      "arrivalSoc": -29.7,
      "departureCharge": undefined,
      "distanceKm": 144,
      "energyKwh": 21,
      "feasible": false,
      "id": "route-2",
      "initialSoc": 15,
      "label": "Ruta C",
      "minSoc": -29.7,
      "noTolls": true,
      "stops": [],
      "totalMinutes": 155,
      "via": "Ruta 45A",
    },
    {
      "arrivalSoc": -33.4,
      "departureCharge": undefined,
      "distanceKm": 149.4,
      "energyKwh": 22.8,
      "feasible": false,
      "id": "route-3",
      "initialSoc": 15,
      "label": "Ruta D",
      "minSoc": -33.4,
      "noTolls": undefined,
      "stops": [],
      "totalMinutes": 160,
      "via": "Ruta 66",
    },
  ],
  "selectedId": "route-0",
  "warnings": [],
  "weather": {
    "elevationM": 1200,
    "source": "Open-Meteo",
    "temperatureC": 22,
    "windDirDeg": 200,
    "windKmh": 12,
  },
}
`;

exports[`caracterización del pipeline con proveedores sintéticos > más segura, SOC 15 %, margen conservador (pide carga antes de salir) 2`] = `"552c8e765fc9708e"`;

exports[`caracterización del pipeline con proveedores sintéticos > planificador v2: menos paradas, SOC 90 % 1`] = `
{
  "chargers": [
    "s20",
    "s35",
    "s45",
    "s60",
    "s72",
  ],
  "engine": [
    "mapbox",
    "mapbox",
    "mapbox",
    "mapbox",
  ],
  "plans": [
    {
      "arrivalSoc": 43.7,
      "departureCharge": undefined,
      "distanceKm": 129.1,
      "energyKwh": 21.8,
      "feasible": true,
      "id": "route-0",
      "initialSoc": 90,
      "label": "Ruta A",
      "minSoc": 43.7,
      "noTolls": undefined,
      "stops": [],
      "totalMinutes": 133,
      "via": "Ruta 45A, Ruta 62",
    },
    {
      "arrivalSoc": 44.2,
      "departureCharge": undefined,
      "distanceKm": 128.7,
      "energyKwh": 21.6,
      "feasible": true,
      "id": "route-1",
      "initialSoc": 90,
      "label": "Ruta B",
      "minSoc": 44.2,
      "noTolls": undefined,
      "stops": [],
      "totalMinutes": 133,
      "via": "Ruta 45A, Ruta 62",
    },
    {
      "arrivalSoc": 41.5,
      "departureCharge": undefined,
      "distanceKm": 144,
      "energyKwh": 22.8,
      "feasible": true,
      "id": "route-2",
      "initialSoc": 90,
      "label": "Ruta C",
      "minSoc": 41.5,
      "noTolls": true,
      "stops": [],
      "totalMinutes": 146,
      "via": "Ruta 45A",
    },
    {
      "arrivalSoc": 38.2,
      "departureCharge": undefined,
      "distanceKm": 149.4,
      "energyKwh": 24.4,
      "feasible": true,
      "id": "route-3",
      "initialSoc": 90,
      "label": "Ruta D",
      "minSoc": 38.2,
      "noTolls": undefined,
      "stops": [],
      "totalMinutes": 151,
      "via": "Ruta 66",
    },
  ],
  "selectedId": "route-0",
  "warnings": [],
  "weather": {
    "elevationM": 1200,
    "source": "Open-Meteo",
    "temperatureC": 22,
    "windDirDeg": 200,
    "windKmh": 12,
  },
}
`;

exports[`caracterización del pipeline con proveedores sintéticos > planificador v2: modo más rápido, SOC 35 % 1`] = `
{
  "chargers": [
    "s20",
    "s35",
    "s45",
    "s60",
    "s72",
  ],
  "engine": [
    "mapbox",
    "mapbox",
    "mapbox",
    "mapbox",
  ],
  "plans": [
    {
      "arrivalSoc": 14.2,
      "departureCharge": undefined,
      "distanceKm": 130.6,
      "energyKwh": 20.2,
      "feasible": true,
      "id": "route-0",
      "initialSoc": 35,
      "label": "Ruta A",
      "minSoc": 14.2,
      "noTolls": undefined,
      "stops": [
        "s20 33.9→56 15 min",
      ],
      "totalMinutes": 158,
      "verification": "verified en 1",
      "via": "Ruta 45A, Ruta 62",
    },
    {
      "arrivalSoc": 14.2,
      "departureCharge": undefined,
      "distanceKm": 128.7,
      "energyKwh": 20.1,
      "feasible": true,
      "id": "route-1",
      "initialSoc": 35,
      "label": "Ruta B",
      "minSoc": 14.2,
      "noTolls": undefined,
      "stops": [
        "s20 34→56 15 min",
      ],
      "totalMinutes": 159,
      "via": "Ruta 45A, Ruta 62",
    },
    {
      "arrivalSoc": 10.3,
      "departureCharge": 20,
      "distanceKm": 144,
      "energyKwh": 21,
      "feasible": true,
      "id": "route-2",
      "initialSoc": 55,
      "label": "Ruta C",
      "minSoc": 10.3,
      "noTolls": true,
      "stops": [],
      "totalMinutes": 155,
      "via": "Ruta 45A",
    },
    {
      "arrivalSoc": 10.6,
      "departureCharge": 24,
      "distanceKm": 149.4,
      "energyKwh": 22.8,
      "feasible": true,
      "id": "route-3",
      "initialSoc": 59,
      "label": "Ruta D",
      "minSoc": 10.6,
      "noTolls": undefined,
      "stops": [],
      "totalMinutes": 160,
      "via": "Ruta 66",
    },
  ],
  "selectedId": "route-0",
  "warnings": [],
  "weather": {
    "elevationM": 1200,
    "source": "Open-Meteo",
    "temperatureC": 22,
    "windDirDeg": 200,
    "windKmh": 12,
  },
}
`;

exports[`caracterización del pipeline con proveedores sintéticos > planificador v2: más segura, SOC 15 % 1`] = `
{
  "chargers": [
    "s20",
    "s35",
    "s45",
    "s60",
    "s72",
  ],
  "engine": [
    "mapbox",
    "mapbox",
    "mapbox",
    "mapbox",
  ],
  "plans": [
    {
      "arrivalSoc": 21.2,
      "departureCharge": 7,
      "distanceKm": 130.6,
      "energyKwh": 20.2,
      "feasible": true,
      "id": "route-0",
      "initialSoc": 22,
      "label": "Ruta A",
      "minSoc": 20.9,
      "noTolls": undefined,
      "stops": [
        "s20 20.9→63 25 min",
      ],
      "totalMinutes": 168,
      "verification": "verified en 1",
      "via": "Ruta 45A, Ruta 62",
    },
    {
      "arrivalSoc": 20.2,
      "departureCharge": 6,
      "distanceKm": 128.7,
      "energyKwh": 20.1,
      "feasible": true,
      "id": "route-1",
      "initialSoc": 21,
      "label": "Ruta B",
      "minSoc": 20,
      "noTolls": undefined,
      "stops": [
        "s20 20→62 25 min",
      ],
      "totalMinutes": 168,
      "via": "Ruta 45A, Ruta 62",
    },
    {
      "arrivalSoc": 20.6,
      "departureCharge": 54,
      "distanceKm": 149.4,
      "energyKwh": 22.8,
      "feasible": true,
      "id": "route-3",
      "initialSoc": 69,
      "label": "Ruta D",
      "minSoc": 20.6,
      "noTolls": undefined,
      "stops": [],
      "totalMinutes": 160,
      "via": "Ruta 66",
    },
    {
      "arrivalSoc": 20.3,
      "departureCharge": 50,
      "distanceKm": 144,
      "energyKwh": 21,
      "feasible": true,
      "id": "route-2",
      "initialSoc": 65,
      "label": "Ruta C",
      "minSoc": 20.3,
      "noTolls": true,
      "stops": [],
      "totalMinutes": 155,
      "via": "Ruta 45A",
    },
  ],
  "selectedId": "route-0",
  "warnings": [],
  "weather": {
    "elevationM": 1200,
    "source": "Open-Meteo",
    "temperatureC": 22,
    "windDirDeg": 200,
    "windKmh": 12,
  },
}
`;
